# projeto_dados_completo_1

./: README.md  pyproject.toml
data/output/: output.xlsx
src/: app.py
src/pipeline/: extract.py  load.py  transfom.py
tests/: test_transform.py
